[EDP-DDM-20101] - Added csv validation endpoints
Change-Id: Ia41d08daf3ecf550541c4f6a2e1408a53129223c