@@ -116,8 +116,12 @@ public class RestApplicationYamlScopeFactory
 
   private Map<String, List<String>> getBulkLoadPaths() {
     return bulkLoadInfoProvider.getTablesWithBulkLoad().stream()
-            .map(this::toHyphenTableName)
-            .collect(toMap(Function.identity(), endpoint -> Collections.singletonList(endpoint + "/list")));
+        .map(this::toHyphenTableName)
+        .collect(
+            toMap(
+                Function.identity(),
+                endpoint ->
+                    List.of(endpoint + "/list", endpoint + "/csv", endpoint + "/csv/validation")));
   }
 
   private List<String> getNestedInsertPaths() {
